force-app/main/default/objects/Activity/fields/Attendance_Link__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Link__c</fullName>
    <formula>$Label.Attendance_URL  +&quot;orientation-attendances?id=&quot;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendance Link</label>
    <type>Text</type>
</CustomField>