force-app/main/default/objects/Activity/fields/Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason__c</fullName>
    <label>Decline Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Can not be reached</fullName>
            </value>
            <value>
                <fullName>Not Suitable</fullName>
            </value>
            <value>
                <fullName>Did not turn up</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>