force-app/main/default/objects/Activity/fields/Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Status__c</fullName>
    <label>Event Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Invitation Sent</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Didn’t turn up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>