force-app/main/default/objects/Activity/fields/Include_in_KPI__c.field-meta.xml
<CustomField>
    <fullName>Include_in_KPI__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check this box if this activity needs to be included in the MSF report</inlineHelpText>
    <label>Include in KPI</label>
    <type>Checkbox</type>
</CustomField>