force-app/main/default/objects/Activity/fields/Interview_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Interview_Outcome__c</fullName>
    <label>Interview Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>