force-app/main/default/objects/Activity/fields/Invitation_Link__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Link__c</fullName>
    <formula>$Label.Attendance_URL +&quot;orientation-invitation?id=&quot;+ Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invitation Link</label>
    <type>Text</type>
</CustomField>