force-app/main/default/objects/Activity/fields/KPI_Type__c.field-meta.xml
<CustomField>
    <fullName>KPI_Type__c</fullName>
    <label>KPI Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Intervention</fullName>
            </value>
            <value>
                <fullName>Service Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>