force-app/main/default/objects/Activity/fields/Missed_Cal__c.field-meta.xml
<CustomField>
    <fullName>Missed_Cal__c</fullName>
    <label>Missed Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Call</fullName>
            </value>
            <value>
                <fullName>2nd Call</fullName>
            </value>
            <value>
                <fullName>3rd Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>