force-app/main/default/objects/Activity/fields/Orientation_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Datetime__c</fullName>
    <label>Orientation Start Datetime</label>
    <type>DateTime</type>
</CustomField>