force-app/main/default/objects/Activity/fields/Orientation_End_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Orientation_End_Datetime__c</fullName>
    <label>Orientation End Datetime</label>
    <type>DateTime</type>
</CustomField>