force-app/main/default/objects/Activity/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <formula>IMAGE(&quot;https://api.qrserver.com/v1/create-qr-code/?size=150x150&amp;data=&quot;+ Attendance_Link__c ,&quot;QR code&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>