force-app/main/default/objects/Activity/fields/Send_Orientation_Invitation__c.field-meta.xml
<CustomField>
    <fullName>Send_Orientation_Invitation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Orientation Invitation</label>
    <type>Checkbox</type>
</CustomField>